// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HandleRoles /> should render correctly on editRole action 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-19t9j1"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Operations
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-1us6gcn"
      >
        <div
          class="css-1r9sqqd"
        >
          <div
            class="chakra-stack css-8g8ihq"
          >
            <h2
              class="chakra-heading css-utvjhb"
              data-testid="title"
            >
              Manage cash in limit
            </h2>
            <form
              class="chakra-stack css-ciro4a"
            >
              <div
                class="chakra-stack css-ppmla1"
              >
                <div
                  class="chakra-form-control css-1kxonj9"
                  data-testid="form_control"
                  role="group"
                >
                  <label
                    class="chakra-form__label css-1hfoxt1"
                    for="field-:r10:"
                    id="field-:r10:-label"
                  >
                    <div
                      class="chakra-stack css-1igwmid"
                    >
                      <p
                        class="chakra-text css-mgupmj"
                        data-testid="selector-label"
                      >
                        Cash in limit option
                      </p>
                      <p
                        class="chakra-text css-x3tq0c"
                      >
                        *
                      </p>
                    </div>
                  </label>
                  <div
                    class="css-svkhat"
                  >
                    <div
                      class="css-3qrqo0"
                    />
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-17n5zh"
                    >
                      <div
                        class="css-3y2vuh"
                      >
                        <span
                          class="chakra-text css-4pvr19"
                          data-testid="select-placeholder"
                        >
                          Select cash in limit option
                        </span>
                        <div
                          class=" css-svnjlw"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=" css-146k1ar-input"
                            id="field-:r10:"
                            role="combobox"
                            spellcheck="false"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-hfbj6y"
                      >
                        <div
                          class="css-1aabyhj"
                        >
                          <svg
                            class="chakra-icon css-13otjrl"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 256 256"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              fill="none"
                              height="256"
                              width="256"
                            />
                            <polyline
                              fill="none"
                              points="208 96 128 176 48 96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="16"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="actionType"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="chakra-stack css-ppmla1"
              >
                <div
                  class="chakra-form-control css-1kxonj9"
                  role="group"
                >
                  <label
                    class="chakra-form__label css-1hfoxt1"
                    for="field-:r11:"
                    id="field-:r11:-label"
                  >
                    <div
                      class="chakra-stack css-1igwmid"
                    >
                      <p
                        class="chakra-text css-mgupmj"
                      >
                        Account
                      </p>
                      <p
                        class="chakra-text css-ftb7fv"
                        data-testid="required"
                      >
                        *
                      </p>
                    </div>
                  </label>
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      autocomplete="off"
                      class="chakra-input css-1tcppn8"
                      data-testid="account"
                      id="field-:r11:"
                      name="account"
                      placeholder="0.0.0"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="chakra-stack css-1tzva4g"
          >
            <div
              class="chakra-stack css-rgkoyu"
            >
              <h2
                class="chakra-heading css-1udj1g5"
                data-testid="details-title"
              >
                Stable coin details
              </h2>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Basic details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Name
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST_ACCELERATOR_SC
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Symbol
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Decimals
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          6
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Optional details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Initial supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Total supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Max supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-3"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Supply type
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          Finite
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-3gu2fl"
        >
          <div
            class="chakra-stack css-1f6hfsa"
          >
            <button
              class="chakra-button css-1urzhdw"
              data-testid="cancel-btn"
              type="button"
            >
              Go back
            </button>
            <button
              class="chakra-button css-qvkb6r"
              data-testid="confirm-btn"
              disabled=""
              type="button"
            >
              Accept
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<HandleRoles /> should render correctly on getAccountsWithRole action 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-19t9j1"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Operations
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-1us6gcn"
      >
        <div
          class="css-1r9sqqd"
        >
          <div
            class="chakra-stack css-8g8ihq"
          >
            <h2
              class="chakra-heading css-utvjhb"
              data-testid="title"
            >
              Get Accounts with role 
            </h2>
            <div
              class="chakra-stack css-ppmla1"
            >
              <div
                class="chakra-form-control css-1kxonj9"
                data-testid="form_control"
                role="group"
              >
                <label
                  class="chakra-form__label css-1hfoxt1"
                  for="field-:r2v:"
                  id="field-:r2v:-label"
                >
                  <div
                    class="chakra-stack css-1igwmid"
                  >
                    <p
                      class="chakra-text css-mgupmj"
                      data-testid="selector-label"
                    >
                      Select a role to find accounts
                    </p>
                  </div>
                </label>
                <div
                  class="css-vyr5r8"
                >
                  <div
                    class="css-3qrqo0"
                  />
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-17n5zh"
                  >
                    <div
                      class="css-3y2vuh"
                    >
                      <span
                        class="chakra-text css-fe5bdd"
                        data-testid="select-placeholder"
                      >
                        Choose supply type
                      </span>
                      <div
                        class="css-vm4o8v"
                      >
                        Admin
                      </div>
                      <div
                        class=" css-svnjlw"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=" css-146k1ar-input"
                          id="field-:r2v:"
                          role="combobox"
                          spellcheck="false"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-hfbj6y"
                    >
                      <div
                        class="css-1aabyhj"
                      >
                        <svg
                          class="chakra-icon css-13otjrl"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 256 256"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="none"
                            height="256"
                            width="256"
                          />
                          <polyline
                            fill="none"
                            points="208 96 128 176 48 96"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="16"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="supplyType"
                    type="hidden"
                    value="0x0000000000000000000000000000000000000000000000000000000000000000"
                  />
                </div>
              </div>
            </div>
            <div
              class="css-13brihr"
              data-testid="button-box"
            >
              <div
                class="css-1i64jsd"
              >
                <p
                  class="chakra-text css-guqahk"
                  data-testid="details-review-title"
                >
                  Accounts with role Admin
                </p>
              </div>
              <div
                class="css-0"
              />
            </div>
          </div>
          <div
            class="chakra-stack css-1tzva4g"
          >
            <div
              class="chakra-stack css-rgkoyu"
            >
              <h2
                class="chakra-heading css-1udj1g5"
                data-testid="details-title"
              >
                Stable coin details
              </h2>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Basic details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Name
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST_ACCELERATOR_SC
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Symbol
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Decimals
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          6
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Optional details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Initial supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Total supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Max supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-3"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Supply type
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          Finite
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-3gu2fl"
        >
          <div
            class="chakra-stack css-1f6hfsa"
          >
            <button
              class="chakra-button css-1urzhdw"
              data-testid="cancel-btn"
              type="button"
            >
              Go back
            </button>
            <button
              class="chakra-button css-qvkb6r"
              data-testid="confirm-btn"
              type="button"
            >
              Accept
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<HandleRoles /> should render correctly on giveRole action 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-19t9j1"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Operations
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-1us6gcn"
      >
        <div
          class="css-1r9sqqd"
        >
          <div
            class="chakra-stack css-8g8ihq"
          >
            <h2
              class="chakra-heading css-utvjhb"
              data-testid="title"
            >
              Give Roles
            </h2>
            <p
              class="chakra-text css-1l6j5k9"
            >
              Role
            </p>
            <div
              class="css-wep3zj"
            />
            <p
              class="chakra-text css-1l6j5k9"
            >
              Accounts
            </p>
            <div
              class="css-1yp4ln"
            >
              <div
                class="css-k008qs"
              >
                <div
                  class="chakra-stack css-ppmla1"
                >
                  <div
                    class="chakra-form-control css-foqkix"
                    role="group"
                  >
                    <label
                      class="chakra-form__label css-1hfoxt1"
                      for="field-:ru:"
                      id="field-:ru:-label"
                    >
                      <div
                        class="chakra-stack css-1igwmid"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          Account
                        </p>
                        <p
                          class="chakra-text css-ftb7fv"
                          data-testid="required"
                        >
                          *
                        </p>
                      </div>
                    </label>
                    <div
                      class="chakra-input__group css-bx0blc"
                      data-group="true"
                    >
                      <input
                        autocomplete="off"
                        class="chakra-input css-1tcppn8"
                        data-testid="rol.0.accountId"
                        id="field-:ru:"
                        name="rol.0.accountId"
                        placeholder="0.0.0"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <svg
                class="chakra-icon css-f34qbz"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="256"
                  width="256"
                />
                <line
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                  x1="216"
                  x2="40"
                  y1="56"
                  y2="56"
                />
                <line
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                  x1="104"
                  x2="104"
                  y1="104"
                  y2="168"
                />
                <line
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                  x1="152"
                  x2="152"
                  y1="104"
                  y2="168"
                />
                <path
                  d="M200,56V208a8,8,0,0,1-8,8H64a8,8,0,0,1-8-8V56"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
                <path
                  d="M168,56V40a16,16,0,0,0-16-16H104A16,16,0,0,0,88,40V56"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
              </svg>
            </div>
            <div
              class="css-1b6ghns"
            >
              <button
                class="chakra-button css-qvkb6r"
                type="button"
              >
                Add account
              </button>
            </div>
          </div>
          <div
            class="chakra-stack css-1tzva4g"
          >
            <div
              class="chakra-stack css-rgkoyu"
            >
              <h2
                class="chakra-heading css-1udj1g5"
                data-testid="details-title"
              >
                Stable coin details
              </h2>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Basic details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Name
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST_ACCELERATOR_SC
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Symbol
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Decimals
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          6
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Optional details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Initial supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Total supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Max supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-3"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Supply type
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          Finite
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-3gu2fl"
        >
          <div
            class="chakra-stack css-1f6hfsa"
          >
            <button
              class="chakra-button css-1urzhdw"
              data-testid="cancel-btn"
              type="button"
            >
              Go back
            </button>
            <button
              class="chakra-button css-qvkb6r"
              data-testid="confirm-btn"
              disabled=""
              type="button"
            >
              Accept
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<HandleRoles /> should render correctly on revokeRole action 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-19t9j1"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Operations
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-1us6gcn"
      >
        <div
          class="css-1r9sqqd"
        >
          <div
            class="chakra-stack css-8g8ihq"
          >
            <h2
              class="chakra-heading css-utvjhb"
              data-testid="title"
            >
              Revoke roles
            </h2>
            <p
              class="chakra-text css-1l6j5k9"
            >
              Role
            </p>
            <div
              class="css-wep3zj"
            >
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="cash in"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="cash in"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Cash in
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="burn"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="burn"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Burn
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="wipe"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="wipe"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Wipe
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="rescue"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="rescue"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Rescue
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="pause"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="pause"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Pause
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="freeze"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="freeze"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Freeze
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="delete"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="delete"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Delete
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="kyc"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="kyc"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  KYC
                </span>
              </label>
              <label
                class="chakra-checkbox css-1577qb8"
                data-testid="admin role"
              >
                <input
                  aria-invalid="false"
                  class="chakra-checkbox__input"
                  id="admin role"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-1ydjfm6"
                />
                <span
                  class="chakra-checkbox__label css-6x44c9"
                >
                  Admin Role
                </span>
              </label>
            </div>
            <p
              class="chakra-text css-1l6j5k9"
            >
              Accounts
            </p>
            <div
              class="css-3vjk35"
            >
              <div
                class="chakra-stack css-ppmla1"
              >
                <div
                  class="chakra-form-control css-1kxonj9"
                  role="group"
                >
                  <label
                    class="chakra-form__label css-1hfoxt1"
                    for="field-:r2t:"
                    id="field-:r2t:-label"
                  >
                    <div
                      class="chakra-stack css-1igwmid"
                    >
                      <p
                        class="chakra-text css-mgupmj"
                      >
                        Account
                      </p>
                      <p
                        class="chakra-text css-ftb7fv"
                        data-testid="required"
                      >
                        *
                      </p>
                    </div>
                  </label>
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      autocomplete="off"
                      class="chakra-input css-1tcppn8"
                      data-testid="rol.0.accountId"
                      id="field-:r2t:"
                      name="rol.0.accountId"
                      placeholder="0.0.0"
                      value=""
                    />
                    <svg
                      class="chakra-icon css-9lsb4d"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="none"
                        height="256"
                        width="256"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="216"
                        x2="40"
                        y1="56"
                        y2="56"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="104"
                        x2="104"
                        y1="104"
                        y2="168"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="152"
                        x2="152"
                        y1="104"
                        y2="168"
                      />
                      <path
                        d="M200,56V208a8,8,0,0,1-8,8H64a8,8,0,0,1-8-8V56"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                      />
                      <path
                        d="M168,56V40a16,16,0,0,0-16-16H104A16,16,0,0,0,88,40V56"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1b6ghns"
            >
              <button
                class="chakra-button css-qvkb6r"
                type="button"
              >
                Add account
              </button>
            </div>
          </div>
          <div
            class="chakra-stack css-1tzva4g"
          >
            <div
              class="chakra-stack css-rgkoyu"
            >
              <h2
                class="chakra-heading css-1udj1g5"
                data-testid="details-title"
              >
                Stable coin details
              </h2>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Basic details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Name
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST_ACCELERATOR_SC
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Symbol
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          TEST
                        </p>
                      </div>
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Decimals
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          6
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-13brihr"
                data-testid="button-box"
              >
                <div
                  class="css-1i64jsd"
                >
                  <p
                    class="chakra-text css-ol2bzi"
                    data-testid="details-review-title"
                  >
                    Optional details
                  </p>
                </div>
                <div
                  class="css-0"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-0"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Initial supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-1"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Total supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-2"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Max supply
                      </p>
                      1000
                    </div>
                    <hr
                      aria-orientation="horizontal"
                      class="chakra-divider css-zaaihy"
                      title="divider"
                    />
                  </div>
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-gg4vpm"
                      data-testid="details-review-detail-3"
                    >
                      <p
                        class="chakra-text css-9s6br4"
                      >
                        Supply type
                      </p>
                      <div
                        class="chakra-stack css-w0g0w4"
                      >
                        <p
                          class="chakra-text css-mgupmj"
                        >
                          Finite
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-3gu2fl"
        >
          <div
            class="chakra-stack css-1f6hfsa"
          >
            <button
              class="chakra-button css-1urzhdw"
              data-testid="cancel-btn"
              type="button"
            >
              Go back
            </button>
            <button
              class="chakra-button css-qvkb6r"
              data-testid="confirm-btn"
              disabled=""
              type="button"
            >
              Accept
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
